package PAI.domain.student;

import java.util.List;

public interface IStudentListFactory {

    List<Student> newArrayList();

}
